patch overflow bug and add credit
*this patch need real refacto*

--- a/front/src/style/css/base.scss
+++ b/front/src/style/css/base.scss
@@ -399,7 +399,7 @@ nav {
 
     .ecran_overflow {
       // windows - header
-      height: calc(100vh - 150px);
+      height: calc(100vh - 193px);
       padding: 1px;
     }
 
